--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ linfa-datasets = { version = "0.7.0", features = ["iris", "generate"] }
 linfa-reduction = "0.7.0"
 linfa-tsne = "0.7.0"
 ndarray = "0.15.6"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
 [dependencies.uuid]
 version = "1.10.0"
 features = [
