--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ ndarray = "0.15.6"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 [dependencies.uuid]
-version = "1.10.0"
+version = "^1.0"
 features = [
   "v4",                # Lets you generate random UUIDs
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
